--- a/template/user/profile.html
+++ b/template/user/profile.html
@@ -38,9 +38,15 @@
               <div class="card-body">
                 
 {% if user.profile_picture %}
-<img src="{{ user.profile_picture }}" width="100" height="100" alt="">
+<center>
+
+  <img src="{{ user.profile_picture }}" width="100" height="100" alt="">
+</center>
 {% else %} <!-- Mask -->
-<img src="" bgcolor="red" width="100" height="100" alt="">
+<center>
+
+  <img src="" bgcolor="red" width="100" height="100" alt="">
+</center>
    {% endif %}
                 <form   method="post" enctype="multipart/form-data">
 
