--- a/template/user/profile.html
+++ b/template/user/profile.html
@@ -20,12 +20,12 @@
       <div class="row">
           <div class="col-md-12">
           <div class="card" id="edit">
-            <cenrter>
+            <center>
               <div class="card-header header-elements-inline">
                  <h3 class="mb-0">
       Profile Overview<br>
       <small>Below is your Online Banking profile details</small></h3>
-              </div></cenrter>
+              </div></center>
               <div class="card-body">
                 
 {% if user.profile_picture %}
